--- a/baidu/task1.html
+++ b/baidu/task1.html
@@ -122,8 +122,11 @@
 	        爱好：<input type="checkbox" name="hob"  /><label for="hob">体育</label><input type="checkbox" value="" /><label for="hob">艺术</label><input type="checkbox" value="" /><label for="hob">设计</label>
 	      个人描述：<textarea>人帅也要多学习</textarea><button>确认提交</button>  
 	    </div>
-	    <div>
+	    <footer>
+	    	<div>
 	    	版权所有&copy;
 	    </div>
+	    </footer>
+	    
 	</body>
 </html>
